--- a/index.html
+++ b/index.html
@@ -242,6 +242,16 @@
 				<p>Данное число четное, соответственно Боря должен ходить вторым, чтобы гарантированно победить.</p>
 			</div>
         </div>
+		<!-- Пример задачи 15 -->
+        <div class="task">
+            <h3>Задача 15 (матричная игра)</h3>
+            <p>Бизнесмен, который планирует поездку в город N через месяц, может столкнуться с неожиданными обстоятельствами, которые могут заставить его отложить отъезд на два дня. В таком случае у него есть два варианта приобретения билета: обычный тариф по цене 100 рублей или экскурсионный тариф по цене 75 рублей. Если бизнесмен выберет обычный тариф, он сможет легко перенести дату отъезда, заплатив дополнительные 5 рублей за переоформление. Однако, если он выберет экскурсионный тариф и будет вынужден перенести отъезд, то он потеряет 75 рублей и придется дополнительно заплатить 100 рублей за новый билет. Определите стратегии игроков и составьте матрицу потерь первого игрока.</p>
+            <button onclick="toggleAnswer(15)">Ответ</button>
+            <div id="answer-15" class="answer">
+				<p>Решение: определим стратегии игроков. Первый игрок имеет две стратегии и может воспользоваться обычным тарифом или воспользоваться экскурсионным тарифом. Второй игрок имеет тоже две стратегии и может: поехать в намеченный срок или сдвинуть поездку на два дня.</p>
+				<p> Составим матрицу потерь: \( \begin{matrix} 100 & 105 \\ 75 & 175 \end{matrix}  \)</p>
+			</div>
+        </div>
     </div>
 		<!-- Пример задачи 3 -->
         <div class="task">
