--- a/index.html
+++ b/index.html
@@ -249,21 +249,10 @@
             <button onclick="toggleAnswer(15)">Ответ</button>
             <div id="answer-15" class="answer">
 				<p>Решение: определим стратегии игроков. Первый игрок имеет две стратегии и может воспользоваться обычным тарифом или воспользоваться экскурсионным тарифом. Второй игрок имеет тоже две стратегии и может: поехать в намеченный срок или сдвинуть поездку на два дня.</p>
-				<p> Составим матрицу потерь: \( \begin{matrix} 100 & 105 \\ 75 & 175 \end{matrix}  \)</p>
+				<p> Составим матрицу потерь: \( \begin{bmatrix} 100 & 105 \\ 75 & 175 \end{bmatrix}  \)</p>
 			</div>
         </div>
     </div>
-		<!-- Пример задачи 3 -->
-        <div class="task">
-            <h3>Задача 3</h3>
-            <p>На наибольшей стороне AB треугольника ABC взяли такие точки P и Q, что AQ = AC, BP = BC. Докажите, что центр описанной окружности треугольника PQC совпадает с центром вписанной окружности треугольника ABC.</p>
-            <button onclick="toggleAnswer(3)">Ответ</button>
-            <div id="answer-3" class="answer">
-                <p>Ответ: Доказательство существует</p>
-                <p>Решение: Треугольник BPC – равнобедренный, поэтому биссектриса угла B совпадает с серединным перпендикуляром к стороне CP. Аналогично биссектриса угла A совпадает с серединным перпендикуляром к отрезку CQ. Но центр вписанной окружности треугольника ABC лежит на пересечении упомянутых биссектрис, а центр описанной окружности треугольника PQC – на пересечении упомянутых серединных перпендикуляров.</p>
-				<img src="images\z3.gif" alt="Рисунок к задаче 3">
-			</div>
-        </div>
     <!-- Блок "О нас" -->
     <div id="about">
         <h2>О нас</h2>
