--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <button onclick="toggleAnswer(15)">Ответ</button>
             <div id="answer-15" class="answer">
 				<p>Решение: определим стратегии игроков. Первый игрок имеет две стратегии и может воспользоваться обычным тарифом или воспользоваться экскурсионным тарифом. Второй игрок имеет тоже две стратегии и может: поехать в намеченный срок или сдвинуть поездку на два дня.</p>
-				<p> Составим матрицу потерь: \( \begin{bmatrix} 100 & 105 \\ 75 & 175 \end{bmatrix}  \)</p>
+				<p> Составим матрицу потерь: \( \begin{pmatrix} 100 & 105 \\ 75 & 175 \end{pmatrix}  \)</p>
 			</div>
         </div>
     </div>
