--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
     <!-- Блок "О нас" -->
     <div id="about">
         <h2>О нас</h2>
-        <p>Мы команда опытных учителей математики, которые любят делиться своим знаниями и помогать ученикам достигать успеха. А на самом деле это часть ВКР студента 5 курса Института математики и компьютерных наук</p>
+        <p> На сайте вы найдёте коллекцию задач по олимпиадной математике, которые предназначены для пытливых школьников, студентов и учителей. У каждой задачи обозначена тема или метод решения. А большинство задач требует знаний высшей математики.<p>
+		<p>Сайт является проектом преподавателя олимпиадной математики Эдуарда Хайрнасова. Выпускник ТюмГУ-2023. Стаж работы - 4 года.</p>
     </div>
     
 </main>
@@ -269,7 +270,7 @@
 
     <div id="footer-contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте h_e@dot.com или по телефону +7 (999) 123-45-67.</p>
+        <p>Вы можете связаться с нами по электронной почте stud0000212779@study.utmn.ru или по телефону +7 (999) 123-45-67, а также в Telegram: @mura_oni</p>
     </div>
 </footer>
 
