--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="images\icon.png" type="image/png">
-    <title>Сборник задач для школьников и учителей</title>
+    <title>Коллекция задач для школьников и учителей</title>
     <style>
         body {
             font-family: Arial, sans-serif;
