--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div id="about">
         <h2>О нас</h2>
         <p> На сайте вы найдёте коллекцию задач по олимпиадной математике, которые предназначены для пытливых школьников, студентов и учителей. У каждой задачи обозначена тема или метод решения. А большинство задач требует знаний высшей математики.<p>
-		<p>Сайт является проектом преподавателя олимпиадной математики Эдуарда Хайрнасова. Выпускник ТюмГУ-2023. Стаж работы - 4 года.</p>
+		<p>Сайт является частью проекта преподавателя олимпиадной математики Эдуарда Хайрнасова. Выпускник ТюмГУ-2023. Стаж работы - 4 года.</p>
     </div>
     
 </main>
@@ -270,7 +270,7 @@
 
     <div id="footer-contacts">
         <h2>Контакты</h2>
-        <p>Вы можете связаться с нами по электронной почте stud0000212779@study.utmn.ru или по телефону +7 (999) 123-45-67, а также в Telegram: @mura_oni</p>
+        <p>Вы можете связаться со мной по электронной почте stud0000212779@study.utmn.ru или по телефону +7 (999) 548-04-45, а также в Telegram: @mura_oni</p>
     </div>
 </footer>
 
