--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
         <h2>О нас</h2>
         <p> На сайте вы найдёте коллекцию задач по олимпиадной математике, которые предназначены для пытливых школьников, студентов и учителей. У каждой задачи обозначена тема или метод решения. А большинство задач требует знаний высшей математики.<p>
 		<p>Сайт является частью проекта преподавателя олимпиадной математики Эдуарда Хайрнасова. Выпускник ТюмГУ-2023. Стаж работы - 4 года.</p>
+		<img src="images\photo.jpg" alt="Фото">
+		
     </div>
     
 </main>
