--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Пример задачи 2 -->
         <div class="task">
             <h3>Задача 2 (оценка плюс пример, задача Адамара о максимальном детерминанте)</h3>
-            <p>Найдите максимальный определитель матрицы, состоящей только из 0 и 1.</p>
+            <p>Найдите максимальное значение определителя матрицы, состоящей только из 0 и 1.</p>
             <button onclick="toggleAnswer(2)">Ответ</button>
             <div id="answer-2" class="answer">
                 <p>Ответ: 2</p>
